--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "say-hello": "node ./hello.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "jquery": "^3.3.1"
+  }
 }
